[package]
name = "gymnarium_base"
version = "0.1.0"

description = "The base crate for the gymnarium libraries used for creating reinforcement environments like the python package gym."
keywords = ["gym", "reinforcement", "learning"]

repository = "https://github.com/tiquthon/gymnarium_base"
authors = ["Thimo Neumann <tiquthon@gmail.com>"]

edition = "2018"
license = "MIT"

[dependencies]
num-traits = "0.2.11"
